@@ -18,17 +18,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|lang
-operator|.
-name|management
-operator|.
-name|ManagementFactory
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
 name|nio
 operator|.
 name|channels
@@ -83,15 +72,6 @@ operator|.
 name|HashSet
 import|;
 end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Random
-import|;
-end_import
 begin_comment
 comment|/**  *<p>Implements {@link LockFactory} using native OS file  * locks.  Note that because this LockFactory relies on  * java.nio.* APIs for locking, any problems with those APIs  * will cause locking to fail.  Specifically, on certain NFS  * environments the java.nio.* locks will fail (the lock can  * incorrectly be double acquired) whereas {@link  * SimpleFSLockFactory} worked perfectly in those same  * environments.  For NFS based access to an index, it's  * recommended that you try {@link SimpleFSLockFactory}  * first and work around the one limitation that a lock file  * could be left when the JVM exits abnormally.</p>  *  *<p>The primary benefit of {@link NativeFSLockFactory} is  * that lock files will be properly removed (by the OS) if  * the JVM has an abnormal exit.</p>  *   *<p>Note that, unlike {@link SimpleFSLockFactory}, the existence of  * leftover lock files in the filesystem on exiting the JVM  * is fine because the OS will free the locks held against  * these files even though the files still remain.</p>  *  *<p>If you suspect that this or any other LockFactory is  * not working properly in your environment, you can easily  * test it by using {@link VerifyingLockFactory}, {@link  * LockVerifyServer} and {@link LockStressTest}.</p>  *  * @see LockFactory  */
 end_comment
@@ -103,213 +83,6 @@ name|NativeFSLockFactory
 extends|extends
 name|FSLockFactory
 block|{
-DECL|field|tested
-specifier|private
-specifier|volatile
-name|boolean
-name|tested
-init|=
-literal|false
-decl_stmt|;
-comment|// Simple test to verify locking system is "working".  On
-comment|// NFS, if it's misconfigured, you can hit long (35
-comment|// second) timeouts which cause Lock.obtain to take far
-comment|// too long (it assumes the obtain() call takes zero
-comment|// time).
-DECL|method|acquireTestLock
-specifier|private
-specifier|synchronized
-name|void
-name|acquireTestLock
-parameter_list|()
-block|{
-if|if
-condition|(
-name|tested
-condition|)
-return|return;
-name|tested
-operator|=
-literal|true
-expr_stmt|;
-comment|// Ensure that lockDir exists and is a directory.
-if|if
-condition|(
-operator|!
-name|lockDir
-operator|.
-name|exists
-argument_list|()
-condition|)
-block|{
-if|if
-condition|(
-operator|!
-name|lockDir
-operator|.
-name|mkdirs
-argument_list|()
-condition|)
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Cannot create directory: "
-operator|+
-name|lockDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-throw|;
-block|}
-elseif|else
-if|if
-condition|(
-operator|!
-name|lockDir
-operator|.
-name|isDirectory
-argument_list|()
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Found regular file where directory expected: "
-operator|+
-name|lockDir
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-throw|;
-block|}
-comment|// add the RuntimeMXBean's name to the lock file, to reduce the chance for
-comment|// name collisions when this code is invoked by multiple JVMs (such as in
-comment|// our tests). On most systems, the name includes the process Id.
-comment|// Also, remove any non-alphanumeric characters, so that the lock file will
-comment|// be created for sure on all systems.
-name|String
-name|randomLockName
-init|=
-literal|"lucene-"
-operator|+
-name|ManagementFactory
-operator|.
-name|getRuntimeMXBean
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-operator|.
-name|replaceAll
-argument_list|(
-literal|"[^a-zA-Z0-9]+"
-argument_list|,
-literal|""
-argument_list|)
-operator|+
-literal|"-"
-operator|+
-name|Long
-operator|.
-name|toString
-argument_list|(
-operator|new
-name|Random
-argument_list|()
-operator|.
-name|nextInt
-argument_list|()
-argument_list|,
-name|Character
-operator|.
-name|MAX_RADIX
-argument_list|)
-operator|+
-literal|"-test.lock"
-decl_stmt|;
-name|Lock
-name|l
-init|=
-name|makeLock
-argument_list|(
-name|randomLockName
-argument_list|)
-decl_stmt|;
-try|try
-block|{
-name|l
-operator|.
-name|obtain
-argument_list|()
-expr_stmt|;
-name|l
-operator|.
-name|release
-argument_list|()
-expr_stmt|;
-comment|// If the test lock failed to delete after all the attempts, attempt a
-comment|// delete when the JVM exits.
-name|File
-name|lockFile
-init|=
-operator|new
-name|File
-argument_list|(
-name|lockDir
-argument_list|,
-name|randomLockName
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|lockFile
-operator|.
-name|exists
-argument_list|()
-condition|)
-block|{
-name|lockFile
-operator|.
-name|deleteOnExit
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-name|RuntimeException
-name|e2
-init|=
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Failed to acquire random test lock; please verify filesystem for lock directory '"
-operator|+
-name|lockDir
-operator|+
-literal|"' supports locking"
-argument_list|)
-decl_stmt|;
-name|e2
-operator|.
-name|initCause
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-throw|throw
-name|e2
-throw|;
-block|}
-block|}
 comment|/**    * Create a NativeFSLockFactory instance, with null (unset)    * lock directory. When you pass this factory to a {@link FSDirectory}    * subclass, the lock directory is automatically set to the    * directory itsself. Be sure to create one instance for each directory    * your create!    */
 DECL|method|NativeFSLockFactory
 specifier|public
@@ -377,9 +150,6 @@ name|String
 name|lockName
 parameter_list|)
 block|{
-name|acquireTestLock
-argument_list|()
-expr_stmt|;
 if|if
 condition|(
 name|lockPrefix
